--- a/src/unit_tests/os_regex/CMakeLists.txt
+++ b/src/unit_tests/os_regex/CMakeLists.txt
@@ -25,6 +25,9 @@ list(APPEND os_regex_flags "-Wl,--wrap=fim_db_file_pattern_search,--wrap=fim_db_
                             -Wl,--wrap=fim_db_file_update,--wrap=fim_db_file_inode_search -Wl,--wrap,fim_db_get_count_file_inode \
                             -Wl,--wrap=fim_db_get_count_file_entry -Wl,--wrap=fim_db_init -Wl,--wrap=fim_run_integrity \
                             -Wl,--wrap=fim_db_transaction_start -Wl,--wrap=fim_db_transaction_sync_row \
+                            -Wl,--wrap,getSyscheckConfig -Wl,--wrap,getRootcheckConfig \
+                            -Wl,--wrap,getSyscheckInternalOptions -Wl,--wrap=Start_win32_Syscheck \ 
+                            -Wl,--wrap=fim_db_get_count_registry_data -Wl,--wrap=fim_db_get_count_registry_key \
                             -Wl,--wrap=fim_db_transaction_deleted_rows,--wrap=fim_sync_push_msg")
 
 # Compiling tests
