--- a/src/unit_tests/os_xml/CMakeLists.txt
+++ b/src/unit_tests/os_xml/CMakeLists.txt
@@ -23,8 +23,11 @@ add_executable(test_os_xml test_os_xml.c)
 target_compile_options(test_os_xml PRIVATE "-Wall")
 target_link_libraries(test_os_xml OS_XML_O ${TEST_DEPS})
 target_link_libraries(test_os_xml "-Wl,--wrap,getpid -Wl,--wrap=fim_db_file_pattern_search,--wrap=fim_db_remove_path -Wl,--wrap,fim_db_get_path \
--Wl,--wrap=fim_db_file_update,--wrap=fim_db_file_inode_search -Wl,--wrap,fim_db_get_count_file_inode \
--Wl,--wrap=fim_db_get_count_file_entry -Wl,--wrap=fim_db_init -Wl,--wrap=fim_run_integrity \
--Wl,--wrap=fim_db_transaction_start -Wl,--wrap=fim_db_transaction_sync_row \
--Wl,--wrap=fim_db_transaction_deleted_rows,--wrap=fim_sync_push_msg")
+                                   -Wl,--wrap=fim_db_file_update,--wrap=fim_db_file_inode_search -Wl,--wrap,fim_db_get_count_file_inode \
+                                   -Wl,--wrap=fim_db_get_count_file_entry -Wl,--wrap=fim_db_init -Wl,--wrap=fim_run_integrity \
+                                   -Wl,--wrap=fim_db_transaction_start -Wl,--wrap=fim_db_transaction_sync_row \
+                                   -Wl,--wrap,getSyscheckConfig -Wl,--wrap,getRootcheckConfig \
+                                   -Wl,--wrap,getSyscheckInternalOptions -Wl,--wrap=Start_win32_Syscheck \ 
+                                   -Wl,--wrap=fim_db_get_count_registry_data -Wl,--wrap=fim_db_get_count_registry_key \
+                                   -Wl,--wrap=fim_db_transaction_deleted_rows,--wrap=fim_sync_push_msg")
 add_test(NAME test_os_xml COMMAND test_os_xml)
