--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -1,5 +1,6 @@
 # Minimum 3.14 required by googletest discover tests
-cmake_minimum_required(VERSION 3.14 FATAL_ERROR)
+# Todo find wich component is not working properly until 3.20 version
+cmake_minimum_required(VERSION 3.20 FATAL_ERROR)
 
 # Set c++17
 set(CMAKE_CXX_STANDARD 17)
