Fixing config files and Windows UTs for FIM

--- a/src/unit_tests/config_files/test_syscheck2.conf
+++ b/src/unit_tests/config_files/test_syscheck2.conf
@@ -12,10 +12,11 @@
     <auto_ignore frequency="10" timeframe="3600">no</auto_ignore>
 
     <!-- Maximum number of files to monitor -->
-    <file_limit>
+    <db_entry_limit>
       <enabled>yes</enabled>
-      <entries>50000</entries>
-    </file_limit>
+      <files>50000</files>
+      <registries>50000</registries>
+    </db_entry_limit>
 
     <!-- Directories to check  (perform all possible verifications) -->
     <directories whodata="yes" tags="tag1,tag2">/etc,/usr/bin,/usr/sbin</directories>
