--- a/src/unit_tests/config_files/test_syscheck_win_max_dir.conf
+++ b/src/unit_tests/config_files/test_syscheck_win_max_dir.conf
@@ -14,10 +14,11 @@
     <auto_ignore frequency="10" timeframe="3600">no</auto_ignore>
 
     <!-- Maximum number of files to monitor -->
-    <file_limit>
+    <db_entry_limit>
       <enabled>yes</enabled>
-      <entries>50000</entries>
-    </file_limit>
+      <files>50000</files>
+      <registries>50000</registries>
+    </db_entry_limit>
 
     <!-- Default files to be monitored. -->
     <directories recursion_level="0" restrict="regedit.exe$|system.ini$|win.ini$">%WINDIR%</directories>
