Adding additional log for invalid user rule (5710) test

--- a/ruleset/testing/tests/sshd.ini
+++ b/ruleset/testing/tests/sshd.ini
@@ -95,6 +95,7 @@ log 5 pass = 2020-03-23 06:47:42.801612-0700  localhost sshd[3186]: error: PAM: 
 log 6 pass = 2020-03-25 08:01:34.584936-0700  localhost sshd[1551]: Failed keyboard-interactive/pam for invalid user user from 172.18.1.1 port 32982 ssh2
 log 7 pass = 2013-10-30T14:51:24.140565+01:00 srv sshd[12664]: Failed keyboard-interactive/pam for invalid user warez from 192.241.237.101 port 54197 ssh2
 log 8 pass = 2020-03-23 08:14:02.777660-0700  localhost sshd[8981]: error: PAM: authentication error for illegal user badguy from 192.168.33.1
+log 9 pass = Jul  3 21:44:07 vmi189193 sshd[26279]: Failed password for invalid user sammy from 82.202.219.155 port 51676 ssh2
 rule = 5710
 alert = 5
 decoder = sshd
