Fix coverage for agent and server builds

--- a/src/syscheckd/CMakeLists.txt
+++ b/src/syscheckd/CMakeLists.txt
@@ -102,7 +102,8 @@ if(UNIT_TEST)
   if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
     target_link_libraries(wazuh-syscheckd -fprofile-arcs)
   else()
-    target_link_libraries(wazuh-syscheckd asan ubsan cmocka gcov)
+    add_definitions(-fprofile-arcs -ftest-coverage)
+    target_link_libraries(wazuh-syscheckd asan ubsan cmocka gcov -fprofile-arcs)
   endif(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 else()
   if(FSANITIZE)
