Add specialization inside FIMDB for compile different code for windows and others

--- a/src/syscheckd/src/db/smokeTests/configWindows.json
+++ b/src/syscheckd/src/db/smokeTests/configWindows.json
@@ -2,6 +2,5 @@
     "storage_type": 1,
     "sync_interval": 60,
     "file_limit": 20,
-    "registry_limit": 20,
-    "is_windows": true
+    "registry_limit": 20
 }
