--- a/src/syscheckd/src/db/CMakeLists.txt
+++ b/src/syscheckd/src/db/CMakeLists.txt
@@ -23,10 +23,12 @@ if(CMAKE_SYSTEM_NAME STREQUAL "SunOS")
 endif(CMAKE_SYSTEM_NAME STREQUAL "SunOS")
 
 if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
+  add_definitions(-DOS_TYPE=OSType::WINDOWS)
   add_library(fimdb STATIC ${DB_SRC}
                            ${CMAKE_SOURCE_DIR}/src/db/src/registry.cpp
                            )
 else()
+  add_definitions(-DOS_TYPE=OSType::OTHERS)
   add_library(fimdb SHARED ${DB_SRC})
 endif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
 
