--- a/src/syscheckd/src/db/smokeTests/config.json
+++ b/src/syscheckd/src/db/smokeTests/config.json
@@ -2,6 +2,5 @@
     "storage_type": 1,
     "sync_interval": 60,
     "file_limit": 20,
-    "registry_limit": 1,
-    "is_windows": false
+    "registry_limit": 1
 }
